search -- 2.0 -- Compatibilité Bridge

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "search"
   ],
   "homepage": "https://svn.tigreblanc.fr/presstify-plugins/search",
-  "time": "2020-04-17",
+  "time": "2020-05-25",
   "license": "proprietary",
   "authors": [
     {
@@ -25,7 +25,7 @@
   ],
   "require": {
     "composer/installers": "~1.0",
-    "presstify/framework": "2.0.*"
+    "presstify/framework": ">=1.4"
   },
   "autoload": {
     "psr-4": {
